# http-fast4s

./: .gitignore  README.md  build.sbt
bench/: post-httperf.txt  stress.sh
example/src/main/scala/io/app/: AppServer.scala  ExpressLike.scala  main.scala  models.scala
fast4s/src/main/scala/io/http/fast4s/api/: package.scala
fast4s/src/main/scala/io/http/fast4s/app/: Fast4s.scala  extra.scala
fast4s/src/main/scala/io/http/fast4s/beast/: EasyBeastInterop.scala  HttpServerAsync.scala  HttpServerSync.scala  conv.scala
fast4s/src/main/scala/io/http/fast4s/core/: HttpServer.scala  HttpServerBuilder.scala  HttpServerConfigs.scala
fast4s/src/main/scala/io/http/fast4s/types/: ContentType.scala  HttpMethod.scala  HttpStatus.scala  MimeType.scala  RawRequest.scala  Request.scala  Response.scala
fast4s/src/test/scala/io/http/fast4s/: BeastStructSpec.scala  ServerHandleSpec.scala
project/: plugins.sbt
src/main/resources/scala-native/: CMakeLists.txt  beast_server.cpp  beast_server.h  http_handler.cpp  http_handler.h  http_handler_extern.cpp  http_handler_extern.h  http_handler_impl.cpp  http_handler_impl.h  http_handler_mock.h  http_scala.cpp  httpserver.cpp  httpserver.h  httpserver_extern.h  lib.c  string_view.h  tcp_async_fiber_server.cpp
src/main/scala/: Main.scala
src/main/scala/app/: AppRouter.scala  AppServer.scala  ExpressLike.scala  Main.scala  Models.scala
src/main/scala/br/com/mobilemind/beast/: HttpMethod.scala  HttpRequest.scala  HttpResponse.scala  HttpServerAsync.scala  HttpServerBase.scala  HttpServerSync.scala  HttpStatus.scala  MimeType.scala  Request.scala  Response.scala  beast_server.scala  general.scala
src/main/scala/io/http/fast4s/: HttpServer.scala  HttpServerBuilder.scala
src/main/scala/io/http/fast4s/app/: Fast4s.scala  Fast4sRequestBuilder.scala  extra.scala
src/main/scala/io/http/fast4s/bindings/: BeastServer.scala  EasyBeastInterop.scala  HttpServerAsync.scala  HttpServerSync.scala  conv.scala
src/main/scala/io/http/fast4s/types/: ContentType.scala  HttpMethod.scala  RawRequest.scala  Request.scala  Response.scala
src/test/scala/: RouterTest.scala
src/test/scala/io/http/fast4s/: BeastStructSpec.scala  ServerHandleSpec.scala
